--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
     - uses: actions/checkout@v1
     - uses: ammaraskar/sphinx-action@master
       with:
+        build-command: "sphinx-build -b html . _build"
         docs-folder: "docs/"
     - uses: actions/upload-artifact@v1
       with:
