--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 name: "Pull Request Docs Check"
-on: [push, pull_request, workflow_dispatch]
+on:
+  push:
+    branches:    
+      - master
 
 jobs:
   docs:
@@ -14,3 +17,23 @@ jobs:
       with:
         name: DocumentationHTML
         path: docs/_build/html/
+        
+    - name: Commit documentation changes
+      run: |
+        git clone https://github.com/juerodriguez/juerodriguez-blog.git --branch gh-pages --single-branch gh-pages
+        cp -r docs/_build/html/* gh-pages/
+        cd gh-pages
+        touch .nojekyll
+        git config --local user.email "stylorj@gmail.com"
+        git config --local user.name "Juerodriguez"
+        git add .
+        git commit -m "Update documentation" -a || true
+        # The above command will fail if no changes were present, so we ignore
+        # that.
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        branch: gh-pages
+        directory: gh-pages
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+    # ===============================
