--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,32 +5,16 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: ammaraskar/sphinx-action@master
-      with:
-        build-command: "sphinx-build -b html . _build"
-        docs-folder: "docs/"
-    - uses: actions/upload-artifact@v2
-      with:
-        name: DocumentationHTML
-        path: docs/_build/html/
-        
-    - name: Commit documentation changes
+    - uses: actions/checkout@v2
+    - name: Sphinx build
       run: |
-        git clone https://github.com/juerodriguez/juerodriguez-blog.git --branch gh-pages --single-branch gh-pages
-        cp -r docs/_build/html/* gh-pages/
-        cd gh-pages
-        touch .nojekyll
-        git config --local user.email "stylorj@gmail.com"
-        git config --local user.name "Juerodriguez"
-        git add .
-        git commit -m "Update documentation" -a || true
-        # The above command will fail if no changes were present, so we ignore
-        # that.
-    - name: Push changes
-      uses: ad-m/github-push-action@master
+        sphinx-build docs _build
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
       with:
-        branch: gh-pages
-        directory: gh-pages
+        publish_branch: gh-pages
         github_token: ${{ secrets.GITHUB_TOKEN }}
-    # ===============================
+        publish_dir: _build/
+        force_orphan: true
+
