--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,14 @@
 name: "Pull Request Docs Check"
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Install dependencies
+      run: |
+        pip install sphinx
     - name: Sphinx build
       run: |
         sphinx-build docs _build
